--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animated": "^1.1.2",
+    "vaul": "^0.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
